News UAT/force-app/main/default/objects/Account_Portfolio_Relationship__c/Account_Portfolio_Relationship__c.object-meta.xml
<CustomObject>
    <description>NextGen - Account portfolio relationship</description>
    <label>Account Portfolio Relationship</label>
    <nameField>
        <label>Account Portfolio Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Portfolio Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>