News UAT/force-app/main/default/objects/Account_Portfolio_Relationship__c/fields/Delete_Flag__c.field-meta.xml
<CustomField>
    <fullName>Delete_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>To Be Deleted</label>
    <type>Checkbox</type>
</CustomField>