News UAT/force-app/main/default/objects/Account_Portfolio_Relationship__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End Date will normally not display unless there has been a change in the length of the portfolio to an account. Will be populated as null by default but will be populated by the data services team whenever there is a specific enddate</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>