News UAT/force-app/main/default/objects/Account_Portfolio_Relationship__c/fields/ExternalID__c.field-meta.xml
<CustomField>
    <fullName>ExternalID__c</fullName>
    <description>External ID for upserting the relationship mapping between Portfolio and Account</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique Identifier for the Portfolio and Account</inlineHelpText>
    <label>ExternalID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>