News UAT/force-app/main/default/objects/Account_Portfolio_Relationship__c/fields/New_External_ID__c.field-meta.xml
<CustomField>
    <fullName>New_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>New External ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>