News UAT/force-app/main/default/objects/Account_Portfolio_Relationship__c/fields/Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Portfolio__c</fullName>
    <label>Portfolio</label>
    <referenceTo>Portfolio2__c</referenceTo>
    <relationshipLabel>Account Portfolio Relationships</relationshipLabel>
    <relationshipName>Account_Portfolio_Relationships</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>