News UAT/force-app/main/default/objects/Account_Portfolio_Relationship__c/fields/Portfolio_Code__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Code__c</fullName>
    <description>Formula field from related Master Porfolio2__c.Portfolio_Code__c</description>
    <formula>Portfolio__r.Portfolio_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Portfolio Code</label>
    <type>Text</type>
</CustomField>