News UAT/force-app/main/default/objects/Account_Portfolio_Relationship__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>start date of the portfolio for a particular account</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>